package pizza;

public class PizzaFromageStyleBrest extends PizzaFromage{
	
	public PizzaFromageStyleBrest() {
		this.setNom("Pizza fromage style Brest");
	}
	public void preparer() {
		System.out.println("Préparation Pizza fromage style Brest");
	}
}
