package pizza;

public class PizzaFromageStyleStrasbourg extends PizzaFromage {

	public PizzaFromageStyleStrasbourg() {
		this.setNom("Pizza fromage style Strasbourg");
	}
	
	public void preparer() {
		System.out.println("Préparation Pizza fromage style Strasbourg");
	}

}
