package pizza;
/**
 * @author HAMDI (from O'Reilly Head-First series)
 * @depend - * - Pizza
 */
public class PizzaGrecque extends Pizza {
	
}
