package pizza;

public class PizzaGrecqueStyleBrest extends PizzaGrecque {

	public PizzaGrecqueStyleBrest() {
		this.setNom("Pizza Grecque style Brest");
	}
	
	public void preparer() {
		System.out.println("Préparation Pizza Grecque style Brest");
	}

}
