package pizza;

public class PizzaGrecqueStyleStrasbourg extends PizzaGrecque {

	public PizzaGrecqueStyleStrasbourg() {
		this.setNom("Pizza Grecque style Strasbourg");
	}

	public void preparer() {
		System.out.println("Préparation Pizza Grecque style Strasbourg");
	}
}
