package pizza;
/**
 * @author HAMDI (from O'Reilly Head-First series)
 * @depend - * - Pizza
 */
public class PizzaPoivrons extends Pizza {

}
