package pizza;

public class PizzaPoivronsStyleBrest extends PizzaPoivrons {
	public PizzaPoivronsStyleBrest() {
		this.setNom("Pizza poivrons style Brest");
	}
	
	public void preparer() {
		System.out.println("Préparation Pizza poivrons style Brest");
	}
}
