package pizza;

public class PizzaPoivronsStyleStrasbourg extends PizzaPoivrons {

	public PizzaPoivronsStyleStrasbourg() {
		this.setNom("Pizza poivrons style Strasbourg");
	}
	
	public void preparer() {
		System.out.println("Préparation Pizza poivrons style Strasbourg");
	}
}
